<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtFilter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edt_search"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorHint"
                android:textColor="@color/colorPrimaryDark" />

            <ImageView
                android:id="@+id/btnSearch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/baseline_search_24"
                android:backgroundTint="@color/orange"
                android:contentDescription="@string/edt_search"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_info"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerTables"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearInfo"
            android:layout_below="@+id/linearSearch"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearInfo"
        android:layout_below="@+id/linearSearch"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_warning_24"
            android:backgroundTint="@color/orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/errorTitle"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/errorText"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>


</FrameLayout>