<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"
            android:padding="16dp"
            android:text="Autorización de transacciones"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:icon="@drawable/baseline_check_circle_24" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"
            android:padding="16dp"
            android:text="Búsqueda de transacciones"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:icon="@drawable/baseline_search_24" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"
            android:padding="16dp"
            android:text="Listado de transacciones"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:icon="@drawable/baseline_checklist_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/orange"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameTest"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Author"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cel"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>
