<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AuthorizationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/logo_nexos"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="32dp"/>

                <EditText
                    android:id="@+id/CommerceCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Código de Comercio"
                    android:text="000123"
                    android:inputType="text"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/colorHint"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:id="@+id/TerminalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Código de Terminal"
                    android:text="000ABC"
                    android:inputType="text"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/colorHint"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:id="@+id/Amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Monto (123.45)"
                    android:inputType="numberDecimal"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/colorHint"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"/>

                <EditText
                    android:id="@+id/Card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Número de Tarjeta"
                    android:text="1234567890123456"
                    android:inputType="number"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/colorHint"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="12dp"
                    android:layout_marginBottom="32dp"/>



            </LinearLayout>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="20dp"
                android:background="@drawable/button_background"
                app:backgroundTint="@null"
                android:padding="16dp"
                android:text="Enviar"
                android:textColor="@android:color/white"
                app:icon="@drawable/baseline_send_24"
                app:iconGravity="end" />

        </LinearLayout>

    </ScrollView>



    <LinearLayout
        android:id="@+id/linearAlertError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imvError"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_warning_24"
            android:backgroundTint="@color/orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/errorTitle"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/errorText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCloseAlert0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"
            android:padding="16dp"
            android:text="Cerrar"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAlertSuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_check_circle_24"
            android:backgroundTint="@color/orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/successTitle"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSuccessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCloseAlert1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"
            android:padding="16dp"
            android:text="Cerrar"
            android:textColor="@android:color/white" />

    </LinearLayout>
</FrameLayout>