<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.DeleteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top">

            <LinearLayout
                android:id="@+id/linearCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:background="@color/orange"
                    android:textAlignment="center"
                    android:text="Detalle Transacción"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="Número de recibo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/baseline_vpn_key_24"
                        android:backgroundTint="@color/orange"
                        android:layout_gravity="left"/>

                    <TextView
                        android:id="@+id/tvReceiptId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:text="Id"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:text="Número de rrn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/baseline_vpn_key_24"
                        android:backgroundTint="@color/orange"
                        android:layout_gravity="left"/>

                    <TextView
                        android:id="@+id/tvRrn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:text="Rrn"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:text="Código del comercio"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/baseline_home_24"
                        android:backgroundTint="@color/orange"
                        android:layout_gravity="left"/>

                    <TextView
                        android:id="@+id/tvCommerceCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:text="CommerceCode"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:text="Dispositivo móvil en el comercio"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/baseline_add_to_home_screen_24"
                        android:backgroundTint="@color/orange"
                        android:layout_gravity="left"/>

                    <TextView
                        android:id="@+id/tvTerminalCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:text="TerminalCode"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:text="Total a pagar por la transacción"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/baseline_monetization_on_24"
                        android:backgroundTint="@color/orange"
                        android:layout_gravity="left"/>

                    <TextView
                        android:id="@+id/tvCount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:text="Count"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:text="Número de la tarjeta"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/baseline_credit_card_24"
                        android:backgroundTint="@color/orange"
                        android:layout_gravity="left"/>

                    <TextView
                        android:id="@+id/tvCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp"
                        android:text="Card"/>

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btnCancelAuthorization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="25dp"
                android:background="@drawable/button_background"
                android:text="@string/textdelete"
                app:backgroundTint="@null"
                app:icon="@drawable/baseline_cancel_schedule_send_24"
                app:iconGravity="end" />

        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:id="@+id/linearAlertError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearInfo"
        android:layout_below="@+id/linearSearch"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imvError"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_warning_24"
            android:backgroundTint="@color/orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/errorTitle"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/errorText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCloseAlert0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"
            android:padding="16dp"
            android:text="Cerrar"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAlertSuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearInfo"
        android:layout_below="@+id/linearSearch"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_check_circle_24"
            android:backgroundTint="@color/orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/successTitle"
            android:textColor="@color/orange"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSuccessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCloseAlert1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            app:backgroundTint="@null"
            android:padding="16dp"
            android:text="Cerrar"
            android:textColor="@android:color/white" />

    </LinearLayout>


</FrameLayout>